# gstreamer-plugins-ugly

./: meson.build
ext/: meson.build
ext/x264/: gstx264enc.h  meson.build
gst/asfdemux/: meson.build
gst/dvdlpcmdec/: meson.build
gst/dvdsub/: meson.build
gst/realmedia/: meson.build  realhash.c  rtspreal.c
gst/xingmux/: meson.build
